# aspire-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  SECURITY.md  V1_V2_README.md
orchestrator/: .env.example  .railwayignore  AGENT_MIGRATION_LEDGER.md  CONVERSATIONAL_INTELLIGENCE_DEPLOYMENT.md  CONVERSATIONAL_INTELLIGENCE_SUMMARY.md  Dockerfile  apply_all_migrations.sh  pyproject.toml  railway.json
orchestrator/ava/: README.md
orchestrator/docs/: elevenlabs_prompting_guide_2026_05_07.html  receptionist_v2_pass2_diff.md
orchestrator/migrations/: 113_add_trade_id_to_suite_profiles.sql  114_create_receipts_dead_letter.sql  115_call_sessions_ringing_ttl.sql  20260517000005_procure_metadata.sql  20260518000001_truth_class_user_actions.sql
orchestrator/scripts/: _ex.txt  _iq.txt  apply_migrations.py  apply_migrations_final.py  apply_via_psycopg2.py  ava_e2e_complete_payload.json  ava_e2e_payload.json  ava_e2e_voice_payload.json  build_ava_prompt.py  certify_agent.cmd  certify_all_templates.py  certify_template.py  check_migration_status.py  clara_e2e_results_20260223-002706.json  clara_e2e_results_20260223-022233.json  clara_e2e_results_20260223-025304.json  clara_e2e_results_20260223-031241.json  clara_e2e_results_20260223-031643.json  clara_e2e_results_20260223-032033.json  daily_el_audit.py  discover_templates.py  execute_migrations.py  export_provider_calls.py  export_receipts.py  generate_evidence_bundle.py  get_supabase_password.py  ingest_legal_knowledge.py  load_test.py  new_agent.cmd  precommit_contract_check.py  refresh_hd_store_directory.py  robot_runner.py  run_el_tests_canary.py  scaffold_agent.py  seed_communication_knowledge.py  seed_conference_knowledge.py  seed_finance_knowledge.py  seed_general_knowledge.py  seed_legal_knowledge.py  seed_stripe_knowledge.py  (+10 more)
orchestrator/scripts/schemas/: robot_run.schema.json
orchestrator/src/aspire_orchestrator/: __init__.py  graph.py  launch.py  models.py  server.py  server_materials_patch.py  startup_self_test.py  state.py
orchestrator/tests/: conftest.py  test_a2a_service.py  test_a2p_routes.py  test_a2p_state_machine.py  test_a2p_state_machine_idempotency.py  test_adam_research.py  test_adam_skillpack.py  test_adam_supplier_search.py  test_admin_api.py  test_admin_store.py  test_admin_trust_routes.py  test_agent_reason.py  test_agent_sdk_framework.py  test_agent_template_kit.py  test_approval_check_node.py  test_approval_service.py  test_attom_500_fallback.py  test_attom_real_addresses.py  test_ava_admin.py  test_ava_chief_of_staff.py  test_ava_personas_and_contracts.py  test_ava_user.py  test_backfill_state_machine.py  test_brain_layer.py  test_branded_calling.py  test_brief_materializer.py  test_build_service_brief.py  test_certification_tcs.py  test_clara_intelligence.py  test_clara_legal.py  test_clara_production.py  test_clara_rag_integration.py  test_client_events.py  test_cnam_change.py  test_cnam_sanitizer.py  test_compliance_infra.py  test_conference_retrieval.py  test_correlation_middleware.py  test_council_learning.py  test_cron_jobs.py  (+163 more)
orchestrator/tests/adam/: __init__.py  debug_allevents.py  debug_attom.py  debug_auction.py  debug_comps.py  debug_current_fc2.py  debug_current_foreclosures.py  debug_foreclosure_deep.py  debug_geocode.py  debug_hotel_data.py  debug_hotels_tucker.py  debug_invest_deep.py  debug_invest_filters.py  debug_investment.py  debug_landlord.py  debug_saleshistory.py  debug_store_resolve.py  debug_store_resolve2.py  debug_store_resolve3.py  demo_final.py  demo_golden.py  demo_live.py  demo_real_prompts.py  demo_scenarios.py  retest_fixes.py  test_cache.py  test_classifiers.py  test_golden_queries.py  test_hd_store_auto.py  test_hd_store_lookup.py  test_homedepot_live.py  test_homedepot_paint.py  test_hotels_tucker.py  test_integration.py  test_investment_live.py  test_investment_live2.py  test_landlord_address_matching.py  test_landlord_section_fanout.py  test_negative.py  test_normalizers.py  (+9 more)
orchestrator/tests/audit/: test_receipt_coverage.py
orchestrator/tests/contracts/: __init__.py  test_el_contract_compliance_workspace.py  test_el_contract_validator.py  test_synthetic_violators.py
orchestrator/tests/fixtures/: real_addresses.py
orchestrator/tests/integration/: test_a2p_gating.py  test_aspire_sms_in_forward_existing_mode.py  test_front_desk_sync_to_personalization.py  test_sarah_personalization_full_payload.py  test_v1_spine_integration.py
orchestrator/tests/materials/: test_materials_product_shape_and_drive_time.py  test_materials_route_supplier_mode.py  test_serpapi_yelp_client.py
orchestrator/tests/observability/: test_trace_propagation.py
orchestrator/tests/personas/: test_receptionist_v2_compliance.py
orchestrator/tests/providers/: test_base_client_url_encoding.py  test_serpapi_budget_integration.py  test_unwrangle_clients.py
orchestrator/tests/routes/: test_callback_routes.py  test_caller_id_lookup.py  test_elevenlabs_tools.py  test_front_desk.py  test_materials_bundles.py  test_materials_search.py  test_messages_contacts_search.py  test_messages_state_changes.py  test_messages_suggestions.py  test_messages_templates.py  test_messages_thread_detail.py  test_messages_threads.py  test_receptionist_personas.py  test_sarah_agent_name_fallback.py  test_sarah_personalization.py  test_sarah_personalization_hardening.py  test_sarah_transfer_app_ring.py  test_sms_route.py  test_telephony.py
orchestrator/tests/scripts/: test_daily_el_audit.py  test_run_el_tests_canary.py  test_sync_audio_tags.py  test_sync_el_tests.py  test_sync_receptionist_kb.py  test_sync_receptionist_prompt.py
orchestrator/tests/security/: test_rls_front_desk_configs.py  test_rls_memory_objects.py  test_rls_memory_objects_ingestion.py  test_rls_messages_routes_cross_tenant.py  test_rls_proactive_candidates.py  test_rls_sms_messages.py  test_rls_sms_messages_pin_archive.py  test_rls_tenant_a2p_registrations.py  test_rls_tenant_phone_numbers.py  test_rls_threads.py
safety-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
safety-gateway/tests/: test_app.py
(+1546 files in other folders)
