[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aspire-orchestrator"
version = "0.1.0"
description = "Aspire LangGraph Orchestrator - the Single Brain (Law #1)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.0,<1.2",
    "langgraph-checkpoint>=3.0.0,<5.0",  # CVE fix; transitive via postgres
    "langgraph-checkpoint-postgres>=3.0.0,<4.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "langchain-core>=1.2.11,<2.0",
    "openai>=2.28.0,<3.0",
    "presidio-analyzer>=2.2.0,<3.0",
    "presidio-anonymizer>=2.2.0,<3.0",
    "httpx>=0.28.0,<0.29",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "fastapi>=0.121.0,<0.122",
    "uvicorn[standard]>=0.34.0,<0.35",
    "pyyaml>=6.0,<7.0",
    "prometheus-client>=0.21.0,<1.0",
    "redis[hiredis]>=5.0.0,<6.0",
    "sentry-sdk[fastapi]>=2.27.0,<3.0",
    "supabase>=2.0.0,<3.0",
    "jsonschema>=4.23.0,<5.0",
    "PyJWT>=2.12.0,<3.0",
    "tiktoken>=0.8.0,<1.0",
    "playwright>=1.42.0,<2.0",  # Browser automation for hybrid browser view (Wave 1)
    "boto3>=1.34.0,<2.0",  # S3 screenshot storage
    "temporalio>=1.9.0,<2.0",  # Temporal SDK for durable workflow orchestration
    "cryptography>=46.0.7,<47.0",  # AES-256-GCM for PayloadCodec encryption + CVE fix
    "opentelemetry-api>=1.20.0,<2.0",  # OTel trace propagation for Temporal interceptor
    "requests>=2.33.0,<3.0",  # CVE fix (.netrc credential leak + redirect issues)
    "usaddress>=0.5.10,<1.0",  # Deterministic US address parsing (CRF tagger) for ATTOM /expandedprofile
    # Security pins — patched min versions for transitive deps flagged by pip-audit
    "aiohttp>=3.13.4",  # CVE fix
    "langchain-core>=1.2.28,<2.0",  # CVE fix (overrides upper line if conflict)
    "langchain-openai>=1.1.14",  # CVE fix
    "langchain-text-splitters>=1.1.2",  # CVE fix
    "langsmith>=0.7.31",  # CVE fix
    # NOTE: pillow CVE fix only landed in 12.x but fastembed pins <12.0;
    # tracking as known limitation until fastembed lifts pillow upper cap.
    "pygments>=2.20.0",  # CVE fix
    "python-dotenv>=1.2.2",  # CVE fix
    "simpleeval>=1.0.5",  # CVE fix
    "tenacity>=9.1.0,<10.0",  # Pass 18+ Lane 2 — retry primitives (already transitive via langgraph)
    "twilio>=9.4.0,<10.0",  # Voice JWT minting + RequestValidator for webhook HMAC
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",  # CVE fix
    "pytest-asyncio>=1.0.0,<2.0",  # bumped for pytest 9 compat
    "pytest-cov>=6.0,<7.0",
    "httpx",  # for TestClient
    "moto[s3]>=5.0,<6.0",  # S3 mocking for provider tests
    "vcrpy>=6.0,<7.0",  # HTTP cassette recording for ATTOM real-address tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater\\.:UserWarning:langchain_core\\._api\\.deprecation",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aspire_orchestrator"]

[tool.hatch.build.targets.wheel.force-include]
"src/aspire_orchestrator/config/policy_matrix.yaml" = "aspire_orchestrator/config/policy_matrix.yaml"
"src/aspire_orchestrator/config/provider_secret_registry.json" = "aspire_orchestrator/config/provider_secret_registry.json"
"src/aspire_orchestrator/config/skill_pack_manifests.yaml" = "aspire_orchestrator/config/skill_pack_manifests.yaml"
"src/aspire_orchestrator/config/tax_rules" = "aspire_orchestrator/config/tax_rules"
"src/aspire_orchestrator/schemas" = "aspire_orchestrator/schemas"

