[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aspire-safety-gateway"
version = "0.1.0"
description = "Aspire Safety Gateway sidecar for NeMo Guardrails-backed request screening"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.121.0,<0.122",
    "uvicorn[standard]>=0.34.0,<0.35",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "httpx>=0.28.0,<0.29",
    "nemoguardrails>=0.21.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/aspire_safety_gateway"]
